Item detail prev/next overflow fix

--- a/static/css/custom.less
+++ b/static/css/custom.less
@@ -1018,6 +1018,10 @@ a:hover {
 		margin: 0 -1.25em -6em;
 		padding: 2em 4em 2em;
 		border-top: 1px solid @grayLighter;
+		.prev, .next {
+			width: 50%;
+			overflow: hidden;
+		}
 		h4 {
 			font-size: 1.5em;
 			margin-bottom: 0.75em;
